--- a/pream/LibraryView/Library.storyboard
+++ b/pream/LibraryView/Library.storyboard
@@ -13,7 +13,7 @@
         <!--Text Input Dimed View Controller-->
         <scene sceneID="4sH-Wl-XpU">
             <objects>
-                <viewController storyboardIdentifier="TextInputDimedViewController" modalPresentationStyle="overFullScreen" id="5Ur-sJ-UpT" customClass="TextInputDimedViewController" customModule="pream" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextInputDimedViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="5Ur-sJ-UpT" customClass="TextInputDimedViewController" customModule="pream" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZhH-IC-dD0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
